# zvenigorodok_svelte

./: .gitignore  CNAME  README.md  index.html  justfile  package.json  sitemap.xml  svelte.config.js  vite-manifest.json
.github/workflows/: build.yml  rust.yml
_app/: version.json
_app/immutable/: start-1fbd92b5.js  start-24139d2d.js  start-30d183c4.js  start-3b5cf71c.js  start-50fb85f5.js  start-6094984c.js  start-783d6f78.js  start-8b0a1e25.js  start-97582315.js  start-a52cf5b5.js  start-c7ecbd66.js  start-eda683b7.js  start-f0bb1205.js
_app/immutable/assets/: _layout-12d38b34.css  _layout-aed71a09.css  _page-0c44a413.css  _page-754b7b90.css  _page-d1f2ef43.css
_app/immutable/chunks/: 0-b0007146.js  0-b41b3bd8.js  0-d0576765.js  0-ea4014ba.js  1-13271003.js  1-36294ce7.js  1-3836f49a.js  1-550fd640.js  1-5d368899.js  1-64f49bec.js  1-94c8572a.js  1-95c3ddc7.js  1-9634c7c0.js  1-acef6c9f.js  1-bf00ce35.js  1-de3d08c6.js  1-e117aaf4.js  2-1205f2d4.js  2-12bf9dd0.js  2-40207cba.js  2-42f67e5d.js  2-50490712.js  2-651e1e92.js  2-7ab9a58d.js  2-e4a086b3.js  index-46d8b8a5.js  index-489db150.js  singletons-0b23a955.js  singletons-1da367d0.js  singletons-1e9958b3.js  singletons-1ee7a252.js  singletons-27be93c3.js  singletons-5a119ba6.js  singletons-5b3d195c.js  singletons-71856425.js  (+5 more)
backend/: .env.example  Cargo.toml
backend/src/: main.rs
docs/: index.html  vite-manifest.json
docs/_app/: version.json
frontend/: .gitignore  package.json  svelte.config.js
frontend/src/: app.html
src/: Map.svelte
src/routes/: +layout.svelte  +page.svelte  layout.svelte
(+46 files in other folders)
