[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.2.1"
dotenv = "0.15.0"
env_logger = "0.9.1"
futures = "0.3.25"
log = "0.4.17"
mongodb = "2.3.1"
serde = { version = "1", features = ["derive"] }
